all graphql api and working is finish need to do some bug fixing and improve coding and alignments

--- a/frontend/src/pages/Booking.css
+++ b/frontend/src/pages/Booking.css
@@ -3,3 +3,31 @@
   top: 50%;
   left: 50%;
 }
+
+.booking-details-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.booking-details {
+  border: 1px solid rgba(21, 82, 13, 0.763);
+  margin: 1rem 0;
+  width: 30rem;
+  max-width: 80%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.details {
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.booking-details h5 {
+  margin: 0;
+}
